update url and get my questions
